# DDNS-DNSPod-rust

./: .gitignore  Cargo.toml  README.md
config/: configuration-example.yaml
src/: main.rs
